--- a/force_sw_update.html
+++ b/force_sw_update.html
@@ -190,7 +190,7 @@
             
             try {
                 if ('serviceWorker' in navigator) {
-                    const registration = await navigator.serviceWorker.register('/static/sw.js');
+                    const registration = await navigator.serviceWorker.register('/sw.js', { scope: '/' });
                     
                     // Wait for the service worker to be ready
                     await navigator.serviceWorker.ready;
